Reorganize project structure and update contact email
- Update contact email to amogh.thodati2@gmail.com
- Organize files into proper folders:
  - src/pages/ for HTML files
  - src/scripts/ for JavaScript files
  - src/styles/ for CSS files
  - assets/images/ for image files
  - assets/fonts/ for font files
- Update manifest.json to reflect new file paths
- Update all HTML files with correct relative paths
- Update README with new organized structure

--- a/src/pages/popup.html
+++ b/src/pages/popup.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="popup.css">
+  <link rel="stylesheet" type="text/css" href="../styles/popup.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <div class="container">
     <div class="header">
       <div class="left">
-        <img src="threeLines.png" alt="Icon" class="icon">
+        <img src="../../assets/images/threeLines.png" alt="Icon" class="icon">
       </div>
       <div class="middle">
         <h1 class="title">
-          <img src="title.png" alt="Title">
+          <img src="../../assets/images/title.png" alt="Title">
         </h1>
       </div>
       <div class="right">
@@ -33,30 +33,30 @@
     <div class="section">
       <div class="box-container" id="boxes4">
         <div class="box" id="ttsBox">
-          <img src="tts.png" alt="1">
+          <img src="../../assets/images/tts.png" alt="1">
         </div>
         <div class="box" id="colorBlindBox">
-          <img src="colorBlind.png" alt="2">
+          <img src="../../assets/images/colorBlind.png" alt="2">
         </div>
         <div class="box" id="languageBox">
-          <img src="screening.png" alt="3">
+          <img src="../../assets/images/screening.png" alt="3">
         </div>
         <div class="box" id="fontSizeBox">
-          <img src="fontSize.png" alt="4">
+          <img src="../../assets/images/fontSize.png" alt="4">
         </div>
       </div>
       <div class="box-container" id="backBoxes4" style="display: none;">
         <div class="box" id="backBox1">
-          <img src="tts.png" alt="1">
+          <img src="../../assets/images/tts.png" alt="1">
         </div>
         <div class="box" id="backBox2">
-          <img src="colorBlind.png" alt="2">
+          <img src="../../assets/images/colorBlind.png" alt="2">
         </div>
         <div class="box" id="backBox3">
-          <img src="screening.png" alt="3">
+          <img src="../../assets/images/screening.png" alt="3">
         </div>
         <div class="box" id="backBox4">
-          <img src="fontSize.png" alt="4">
+          <img src="../../assets/images/fontSize.png" alt="4">
         </div>
       </div>
     </div>
@@ -111,7 +111,7 @@
       <button class="applyButton">Apply Changes</button>
     </div>
     <div id="fontSizeContent" class="content" style="display: none;">
-      <h4 class="productLabel1">Manage font visibility: <img src="back.png" class="backButton4" style="float: right;"></h4>
+      <h4 class="productLabel1">Manage font visibility: <img src="../../assets/images/back.png" class="backButton4" style="float: right;"></h4>
     
       <!-- Font Size Section -->
       <div>
@@ -187,6 +187,6 @@
       <span id="info" class="linkWebsite">Learn More</span>
     </div>
   </div>
-  <script src="popup.js"></script>
+  <script src="../scripts/popup.js"></script>
 </body>
 </html>
